# similar_user

./: AGENTS.md  README.md  pyproject.toml
config/: neo4j.yaml  query.yaml  settings.py  settings.yaml  similarity.yaml
scripts/: build_patient_pattern_paths.py  build_similar_user_candidates.py  debug_patient_pattern_paths.py  debug_query.py  evaluate_predict_training_tasks.py  predict_training_tasks.py  read_patient_pattern_result.py  run_api.py  run_similar_user_pipeline.py  score_patient_pattern_paths.py  score_patient_pattern_result.py
src/similar_user/: __init__.py
src/similar_user/api/: app.py
src/similar_user/data_access/: __init__.py  cypher_queries.py  kg_repository.py  neo4j_client.py
src/similar_user/domain/: __init__.py  graph_schema.py  item.py  path_models.py  user.py
src/similar_user/pipelines/: __init__.py  build_graph.py  compute_similarity.py  sync_data.py
src/similar_user/services/: __init__.py  llm_client.py  path_scoring.py  task_prediction.py  user_service.py
src/similar_user/utils/: __init__.py  helpers.py  logger.py  metrics.py  pattern_storage.py
tests/: test_api_app.py  test_cypher_query_docs.py  test_domain_models.py  test_evaluate_predict_training_tasks.py  test_kg_repository.py  test_llm_client.py  test_logger.py  test_neo4j_client.py  test_path_scoring.py  test_pattern_storage.py  test_predict_training_tasks_script.py  test_read_patient_pattern_result.py  test_similar_user_candidates.py  test_similarity_service.py  test_similarity_utils.py  test_task_prediction.py  test_user_service.py
(+13 files in other folders)
