[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "similar-user"
version = "0.1.0"
description = "Neo4j-based similar user service scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5,<6",
    "PyYAML>=6,<7",
    "requests>=2,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
